test/expected.txt

##########################
# testing the HAPPY path #
##########################


+---------+
| Crystal |
+---------+

Testing the happy path Crystal version...
hello
1
22
333
4444
55555
666666
Yes!
what?
world
Done.

+------+
| Ruby |
+------+

Testing happy path Ruby version...
hello
1
22
333
4444
55555
666666
Yes!
what?
world
Done.

############################
# testing error conditions #
############################


+---------+
| Crystal |
+---------+

Testing the error paths Crystal version...

ERROR: File Does Not Exist
   |
 4 | with /path/to/bad_filename.just
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^

exit code: 1

ERROR: File Does Not Exist
   |
 4 | with
   |      ^^^^^^^^^^^^^

exit code: 1
Done.

+------+
| Ruby |
+------+

Testing the error paths Ruby version...

ERROR: File Does Not Exist
   |
 4 | with /path/to/bad_filename.just
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^

exit code: 1

ERROR: File Does Not Exist
   |
 4 | with
   |      ^^^^^^^^^^^^^

exit code: 1
Done.

######################################
# testing the ability to GLOB a path #
######################################


+---------+
| Crystal |
+---------+

Testing the glob paths Crystal version...
exit code: 0
# justprep/test/glob_good.just

# the path contains several files
# with glob_dir/**/*.just

# >>> glob_dir/three/three.just
# three to get ready
@three:
  echo "glob 333"

# hi
@hello:
  echo "glob hello"
# <<< glob_dir/three/three.just

# >>> glob_dir/one/one.just
# one for the money
@one:
  echo "glob 1"

# johnny 5
@five:
  echo "glob 55555"
# <<< glob_dir/one/one.just

# >>> glob_dir/two/two.just
# two for the money
@two:
  echo "glot 22"

# six pick up sticks
@six:
  echo "glob 666666"
# <<< glob_dir/two/two.just

# >>> glob_dir/four/four.just
# go cat go
@four:
  echo "glob 4444"
# <<< glob_dir/four/four.just

cat: glob_dir/expected_justfile: No such file or directory

ERROR: File Does Not Exist
   |
 4 | with /path/to/no_where/**/*.just
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^

exit code: 1
Done.

+------+
| Ruby |
+------+

Testing the glob paths Ruby version...
exit code: 0
# justprep/test/glob_good.just

# the path contains several files
# with glob_dir/**/*.just

# >>> glob_dir/four/four.just
# go cat go
@four:
  echo "glob 4444"
# <<< glob_dir/four/four.just

# >>> glob_dir/one/one.just
# one for the money
@one:
  echo "glob 1"

# johnny 5
@five:
  echo "glob 55555"
# <<< glob_dir/one/one.just

# >>> glob_dir/three/three.just
# three to get ready
@three:
  echo "glob 333"

# hi
@hello:
  echo "glob hello"
# <<< glob_dir/three/three.just

# >>> glob_dir/two/two.just
# two for the money
@two:
  echo "glot 22"

# six pick up sticks
@six:
  echo "glob 666666"
# <<< glob_dir/two/two.just


ERROR: File Does Not Exist
   |
 4 | with /path/to/no_where/**/*.just
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^

exit code: 1
# justprep/test/glob_bad.just

# the path does not exist
# with /path/to/no_where/**/*.just
Done.

#########################
# testing use of envars #
#########################


+---------+
| Crystal |
+---------+

Testing the envar paths Crystal version...
exit code: 0
# .../justprep/test/envar.just

# with ~/temp.just

# >>> /Users/dewayne/temp.just
# Move this file to your home directory

# To test the subsitution of environment variables
# and the tidil character.
sub_envars:
  echo "it worked"
# <<< /Users/dewayne/temp.just

# with $HOME/temp.just

# >>> /Users/dewayne/temp.just
# Move this file to your home directory

# To test the subsitution of environment variables
# and the tidil character.
sub_envars:
  echo "it worked"
# <<< /Users/dewayne/temp.just

# with ${HOME}/temp.just

# >>> /Users/dewayne/temp.just
# Move this file to your home directory

# To test the subsitution of environment variables
# and the tidil character.
sub_envars:
  echo "it worked"
# <<< /Users/dewayne/temp.just

Done.

+------+
| Ruby |
+------+

Testing the envar paths Ruby version...
exit code: 0
# .../justprep/test/envar.just

# with ~/temp.just

# >>> /Users/dewayne/temp.just
# Move this file to your home directory

# To test the subsitution of environment variables
# and the tidil character.
sub_envars:
  echo "it worked"
# <<< /Users/dewayne/temp.just

# with $HOME/temp.just

# >>> /Users/dewayne/temp.just
# Move this file to your home directory

# To test the subsitution of environment variables
# and the tidil character.
sub_envars:
  echo "it worked"
# <<< /Users/dewayne/temp.just

# with ${HOME}/temp.just

# >>> /Users/dewayne/temp.just
# Move this file to your home directory

# To test the subsitution of environment variables
# and the tidil character.
sub_envars:
  echo "it worked"
# <<< /Users/dewayne/temp.just

Done.

########################
# testing fake modules #
########################


+---------+
| Crystal |
+---------+

Testing fake modules Crystal version...
exit code: 0
# justprep/test/module_good.just

module_aaa := "modules/aaa/justfile"
module_bbb := "modules/bbb/justfile"

# Show Available Recipes
@list:
  just --list

# Show All Available Recipes including the Modules
@list_all: list aaa bbb


# Module aaa
@aaa what='' args='':
  just -f {{module_aaa}} {{what}} {{args}}



# Module bbb
@bbb what='' args='':
  just -f {{module_bbb}} {{what}} {{args}}


ERROR: File Does Not Exist
   |
 4 | module /path/to/no_where/justfile
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^

exit code: 1
Done.

+------+
| Ruby |
+------+

Testing fake modules Ruby version...
exit code: 0
# justprep/test/module_good.just

module_aaa := "modules/aaa/justfile"
module_bbb := "modules/bbb/justfile"

# Show Available Recipes
@list:
  just --list

# Show All Available Recipes including the Modules
@list_all: list aaa bbb


# Module aaa
@aaa what='' args='':
  just -f {{module_aaa}} {{what}} {{args}}



# Module bbb
@bbb what='' args='':
  just -f {{module_bbb}} {{what}} {{args}}


ERROR: File Does Not Exist
   |
 4 | module /path/to/no_where/justfile
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^

exit code: 1
# justprep/test/module_bad.just

# the path does not exist
Done.
